# boids-algorithm

./: CMakeLists.txt  README.md
src/: boid.cpp  boid.h  core.cpp  core.h  main.cpp
